hw03-annotations